# joshua-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.es.md  README.md  SECURITY.md  action.yml  demo-sprint.yaml  deploy-local.sh  deploy.sh  docker-compose.yaml  pyproject.toml  slack-app.yml  webhook_server.py
.github/workflows/: ci.yml  publish.yml
assets/: demo.cast
docs/: ecommerce-qa.md  primor-setup.md
examples/: executive-team.yaml  full-team.yaml  jira-vulcan.yaml  legal-review.yaml  minimal.yaml  nextjs.yaml  primor-magento.yaml  primor-mobile.yaml  python-api.yaml  wordpress.yaml
examples/ci/: github-actions.yml  gitlab-ci.yml
hooks/: deploy_recipes.py  e2e_gate.py  gitlab_mr.py  gmail_scan.py  jira_create_bug.py  jira_to_yaml.py  jira_transition.py  project_lock.py  redis_bus.py  security_scan.py  smoke_gate.py  wiki_revert.py
joshua/: __init__.py  agents.py  cli.py  config.py  config_schema.py  gate_contract.py  persistence.py  process_manager.py  server.py  sprint.py  supervisor.py  worker.py
joshua/integrations/: __init__.py  brain_callback.py  git.py  hub_callback.py  notifications.py  notifiers.py  status_checks.py  task_sources.py  ticket_sink.py  trackers.py
joshua/memory/: __init__.py  evolve.py  lessons.py  wiki.py
joshua/runners/: __init__.py  aider.py  base.py  claude.py  codex.py  custom.py
joshua/utils/: __init__.py  handoff.py  health.py  preflight.py  redact.py  safe_cmd.py  scratchpad.py  signing.py  status.py  tool_check.py  tracer.py  (+1 more)
scripts/: demo-app.py  demo-config.yaml  demo.sh  mock-runner.sh
skills/: performance-gate.yaml  playwright-qa.yaml  registry.json  security-audit.yaml
tests/: conftest.py  test_agents.py  test_config.py  test_config_schema.py  test_gate_contract.py  test_integrations.py  test_memory.py  test_new_features.py  test_persistence.py  test_preflight.py  test_process_manager.py  test_runners.py  test_safe_cmd.py  test_security.py  test_server.py  test_server_http.py  test_signing.py  test_sprint.py  test_task_sources.py  test_tracer.py  test_v1_12.py  test_v1_14.py
